--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,297 @@
-body {
+/* GENERAL STYLES  */
+
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: sans-serif;
+  font-weight: 400;
+  color: #262626;
+}
+
+/* NAVIGATION STYLES  */
+
+.nav {
+  padding: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav .custom-logo img {
+  width: 10rem;
+  height: 10rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.nav .search {
+  width: 50%;
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+
+.nav .search input {
+  width: 100%;
+  outline: none;
+  border-radius: 2rem;
+  border: 2.5px solid #5e169e;
+  padding: 5px 2.95rem 5px 10px;
+  font-size: 17px;
+  height: 4.95rem;
+  transition: all 0.3s;
+}
+
+.nav .search input:focus {
+  box-shadow: 6px 7px 5px -5px rgba(0,0,0,0.51);
+}
+
+.nav .search .button-search {
+  position: absolute;
+  background-color: #5e169e;
+  height: 4.9rem;
+  width: 4.95rem;
+  right: 0.04rem;
+  border-radius: 0% 50% 50% 0%;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  justify-content: center;
+  align-items: center;
+}
+
+/* NOT FOUND STYLES  */
+
+.content {
+  width: 100%;
+  padding: 3rem;
+}
+
+.content .not-found {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content .not-found p {
+  color: #ffffff;
+  background-color: #B12704;
+  font-size: 1.5rem;
+  padding: 2rem;
+  font-weight: 600;
+  border-radius: 0.5rem;
+}
+
+/* LOADER STYLES  */
+
+.content .loader {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content .loader .card {
+  width: 30%;
+  margin: 1rem 0;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+}
+
+.content .loader .card .data {
+  padding: 20px 30px;
+}
+
+.content .loader .card .image,
+.content .loader .card h2, 
+.content .loader .card p {
+  background: #eee;
+  background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
+  border-radius: 5px;
+  background-size: 200% 100%;
+  animation: 1.5s shine linear infinite;
+
+}
+
+.content .loader .card .image {
+  height: 200px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.content .loader .card h2 {
+  height: 30px;
+}
+
+.content .loader .card p {
+  height: 70px;
+}
+
+/* DYNAMIC CONTENT STYLES */
+.content .box {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content .box .card {
+  cursor: pointer;
+  margin: 3rem 0;
+  background-color: #eee;
+}
+
+.content .box .card:hover {
+  animation-name: tossing;
+	animation-duration: 2.5s;	
+	animation-iteration-count: infinite;
+}
+
+.content .box .card h2 {
+  text-align: center;
+  padding: 2rem;
+  font-size: 2.3rem;
+  font-weight: 500;
+  font-family: sans-serif;
+}
+
+/* MODAL STYLES */
+.content .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 15;
+}
+
+.content .modal .modal--inside {
+  position: relative;
+  width: 38%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 32px 32px;
+  background-color: #fff;
+  border-radius: 24px;
+  text-align: center;
+}
+
+.content .modal .modal--inside .close {
+  position: absolute;
+  top: 0.5rem;
+  right: 4rem;
+  width: 0;
+  height: 0;
+  background: transparent;
+  cursor: pointer;
+}
+
+.content .modal .modal--inside h2 {
+  font-size: 2.5rem;
+  margin: 2rem;
+  background-color: forestgreen;
+  color: #eee;
+  border-radius: 10px;
+}
+
+.content .modal .modal--inside p {
+  font-size: 16px;
+}
+
+/* ANIMATION TO LOAD CARDS */
+
+@keyframes shine {
+  to {
+    background-position-x: -200%;
+  }
+}
+
+@keyframes tossing {
+	0% {
+		transform: rotate(-4deg);	
+	}
+	50% {
+		transform: rotate(4deg);
+	}
+	100% {
+		transform: rotate(-4deg);	
+	}						
+}
+
+
+/* RESPONSIVE MEASURES  */
+
+@media (max-width: 900px) {
+  .content .modal .modal--inside {
+    width: 70%;
+  }
+}
+
+@media (max-width: 700px) {
+  .nav .custom-logo {
+    margin-right: 2rem;
+  }
+
+  .nav .search {
+    width: 80%;
+  }
+
+  .content .loader .card {
+    width: 45%;
+  }
+}
+
+@media (max-width: 660px) {
+  .content .box {
+    justify-content: center;
+  }
+  .content .modal .modal--inside {
+    width: 90%;
+  }
+}
+
+@media (max-width: 400px) {
+  .nav .custom-logo {
+    margin-right: 1rem;
+  }
+
+  .nav .search {
+    width: 90%;
+  }
+
+  .content .loader .card {
+    width: 100%;
+  }
+
+  .nav .search .button-search {
+    width: 3.5rem;
+  }
 }
